# tear_waste

./: .dockerignore  .env.example  .env.test  .flake8  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  test_example.py_test.py
app/: main.py
app/models/: teams.py  users.py  waste.py
app/repositories/: __init__.py  team_repository.py  team_service.py  user_repository.py  waste_repository.py
app/routes/: authentication_routes.py  team_routes.py  teams.py  user_routes.py  waste_routes.py
app/services/: authentication_service.py  authorization_service.py  team_service.py  user_service.py  waste_service.py
app/utils/: cache.py  db.py  jwt.py  password.py  permissions.py
deployments/: postgres.yaml  redis.yaml  secret.yaml  tearwaste.yaml
test/: conftest.py  jwt_test.py  team_repository_test.py  team_service_test.py  teams_e2e_test.py  user_repository_test.py  waste_repository_test.py
test/e2e_api/: authentication_e2e_test.py  teams_e2e_test.py  users_e2e_test.py  waste_e2e_test.py
test/repositories/: team_repository_test.py  user_repository_test.py  waste_repository_test.py
test/services/: authorization_service_test.py  user_service_test.py  waste_service_test.py
