[project]
name = "tear-waste"
version = "0.1.0"
description = ""
authors = [
    {name = "egi",email = "egigjevori15@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
